apply plugin: 'java'
apply plugin: 'eclipse'

sourceCompatibility = '15'
targetCompatibility = '15'

repositories {
	mavenCentral()
}

dependencies {
	implementation files(
		'jar/commons-collections4-4.1.jar',
		'jar/commons-lang3-3.7.jar',
		'jar/guava-19.0.jar')
}

sourceSets {
    main {
        java {
            srcDir 'src'
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('--enable-preview')
}

jar {
    from configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
}
